# skynet

./: CMakeLists.txt  Dockerfile  README.md  color.h  imgui.ini  temp.txt
assets/data/: first.skynet  init.skynet  inverse.skynet  panda.skynet  panda.vx  sphere.skynet
assets/glsl/: bvh.glsl  scene.glsl  vector.glsl
assets/mesh/panda/: panda.xml
assets/mesh/robots/panda/: panda.xml  temp.xml
doc/: binding.md  xml.md
include/: ImGuizmo.h  buffer.h  camera.h  color.h  core.h  data.h  dialog.h  engine.h  frame.h  gui.h  guizmo.h  imguizmo.h  joint.h  link.h  math.h  mesh.h  physics.h  scene.h  serializer.h  shader.h  texture2d.h  transformable.h  util.h  xml.h
include/Engine/: Camera.h  Data.h  Enums.h  Scene.h  Serializer.h
include/Engine/Collision/: BVH.h  BVHData.h  BVHFunc.h  BoxGen.h  Contact.h  GJKSolver.h  OBB.h  Support.h
include/Engine/Entity/: Component.h  GenEntity.h  Mesh.h  Point.h  RigidBody.h  Triangle.h  Vector.h
include/Engine/Interface/: ContentBrowser.h  FileDialog.h  Global.h  Guizmo.h  ImGuizmo.h
include/Engine/Solver/: ODE.h
include/Event/: Event.h  KeyCode.h  KeyEvent.h  MouseCode.h  MouseEvent.h  WindowEvent.h
include/Graphics/: Buffer.h  Frame.h  Point.h  Shader.h  Texture.h  Triangle.h  Vector.h
include/Math/: Constants.h  Graphics.h  Math.h  Matrix.h  Vector.h  Visualize.h
include/Platform/Renderer/OpenGL/: OpenGLContext.h  OpenGLRenderer.h
include/Platform/Window/: InputGLFW.h  WindowGLFW.h
include/System/: Application.h  Context.h  Input.h  Interface.h  Layer.h  LayerStack.h  Renderer.h  System.h  Timestep.h  Window.h
libs/assimp-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
libs/assimp-build/code/: Makefile  cmake_install.cmake
libs/assimp-build/include/assimp/: revision.h
libs/assimp-build/insta/lib/cmake/assimp-5.4/: assimpTargets.cmake
libs/assimp-build/install/lib/cmake/assimp-5.4/: assimpTargets-noconfig.cmake
libs/assimp-build/test/: Makefile  cmake_install.cmake
libs/assimp-build/test/headercheck/: Makefile  cmake_install.cmake
libs/glfw-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
libs/glfw-build/src/: Makefile  cmake_install.cmake
libs/glm-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
libs/glm-build/glm/: Makefile  cmake_install.cmake
libs/tinyxml2-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt  xmltest
libs/yaml-cpp-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  libyaml-cpp.so.0.8.0
libs/yaml-cpp-build/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake  parse  read  sandbox
scripts/: build_deps.sh  install.md  run.sh
src/: ImGuizmo.cpp  buffer.cpp  camera.cpp  dialog.cpp  frame.cpp  gui.cpp  guizmo.cpp  imguizmo.cpp  joint.cpp  link.cpp  main.cpp  math.cpp  mesh.cpp  scene.cpp  serializer.cpp  shader.cpp  texture2d.cpp  transformable.cpp  xml.cpp
src/Engine/: Camera.cpp  Scene.cpp  Serializer.cpp
src/Engine/Collision/: BVHFunc.cpp  Contact.cpp  GJKSolver.cpp
src/Engine/Entity/: GenEntity.cpp  Mesh.cpp  Point.cpp  RigidBody.cpp  Triangle.cpp  Vector.cpp
src/Engine/Interface/: ContentBrowser.cpp  FileDialog.cpp  Global.cpp  Guizmo.cpp  ImGuizmo.cpp
src/Engine/Solver/: ODE.cpp
src/Graphics/: Buffer.cpp  Frame.cpp  Point.cpp  Shader.cpp  Texture.cpp  Vector.cpp
src/Math/: Graphics.cpp  Matrix.cpp  Vector.cpp  Visualize.cpp
src/Platform/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLRenderer.cpp
src/Platform/Window/: InputGLFW.cpp  WindowGLFW.cpp
src/System/: Application.cpp  Interface.cpp  Layer.cpp  LayerStack.cpp  Renderer.cpp  Window.cpp
